<resources>
    <!-->MainActivity[start]<-->
    <string name="app_name">NewEasyBill</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dream_plan">稻城之梦</string>
    <string name="dream_deadline">80</string>
    <string name="balance">Balance ￥%1$f</string>
    <!-->MainActivity[end]<-->

    <!-->BillActivity[start]<-->
    <string name="title_activity_bill">BillActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_sett">设置</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_cate">分类管理</string>
    <string name="title_activity_add_bill">添加记录</string>
    <!-->BillActivity[end]<-->
    <!-->login[start]<-->
    <string name="action_settings">Settings</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="account">账号</string>
    <string name="pwd">密码</string>
    <string name="login">登陆</string>
    <string name="cancel">取消</string>
    <string name="register">注册</string>
    <string name="find_password">找回密码</string>
    <!-->login[end]<-->
<!--graph[start]-->
    <string name="graph_main">图表</string>
    <string name="menu_graph_i">收入</string>
    <string name="menu_graph_o">支出</string>
    <string name="menu_graph_b">预算</string>
    <string name="hello_world">Hello world!</string>
    <!--graph[end]-->
</resources>
