<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_friend_title"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:gravity="center"
            android:text="AppName"
            android:textColor="#ffffff"
            android:textSize="20dip" />
    </LinearLayout>

    <RelativeLayout
            android:id="@+id/editRel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:id="@+id/accountRel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:clickable="true"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/tvAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/account"
                    android:textColor="#000"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/edtAccount"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dip"
                    android:layout_toRightOf="@id/tvAccount"
                    android:background="@null"
                    android:hint="@string/account"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/pwdRel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/accountRel"
                android:clickable="true"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/tvPwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/pwd"
                    android:textColor="#000"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/edtPwd"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dip"
                    android:password="true"
                    android:layout_toRightOf="@id/tvPwd"
                    android:background="@null"
                    android:hint="@string/pwd"
                    android:textSize="15sp" />
            </RelativeLayout>
        </RelativeLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="记住密码"
        android:id="@+id/cbRemember"
        android:checked="false" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="65.83dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="#ffffff" />


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="65.83dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/login"
            android:layout_weight="1"
            android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvSound_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:layout_marginLeft="15dip"
            android:text="@string/forget_pwd"
            android:textColor="#29981A" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:layout_marginLeft="15dip"
            android:text="@string/register"
            android:textColor="#29981A" />
    </LinearLayout>

</LinearLayout>